# racecar

racecar_control/: CMakeLists.txt  package.xml
racecar_control/config/: racecar_control.yaml
racecar_control/launch/: spawn_racecar_with_controller.launch
racecar_control/src/: gazebo_interface.cpp  gazebo_interface.py
racecar_description/: CMakeLists.txt  package.xml
racecar_description/launch/: description.launch  racecar_empty.launch  spawn_racecar.launch
racecar_description/meshes/: wheel.STL
racecar_description/plugins/: add_force.cpp
racecar_description/urdf/: .accessories.urdf.xacro.swp  accessories.urdf.xacro  base.xacro  hinge.urdf.xacro  racecar.urdf.xacro  sensors.xacro  wheel.urdf.xacro
racecar_description/urdf/accessories/: hokuyo.urdf.xacro  intel_realsense.urdf.xacro
